--- a/main.mustache
+++ b/main.mustache
@@ -1,80 +1,129 @@
-<img href="https://themagicalmammal.wrapped.run" src="/images/header.gif"/>
-   <p> I am Dipan, a Python Developer at <a href="https://www.etlsystems.com"> 
-   <img src="https://i.imgur.com/wCpjNzM.png" width="13" /> ETL Systems </a> in <img src="https://i.imgur.com/DPngeUJ.png" width="13" /> <b>London, England</b>. 
-<img align="right" width="320" height="auto" src="/images/octocat/6.gif">
-<h3><img src="https://i.imgur.com/HFHIBmx.png" width="15" /> Weather in London </h3>
-Currently, the weather is: <b> {{city_temperature}}°C, <i>{{city_weather}}</i></b>
-<br /> Today, the sun rises at <b>{{sun_rise}}</b> and sets at <b>{{sun_set}}</b>. 
-</p>
-<h3><img src="https://i.imgur.com/aSVPWXc.png" width="15" /> Spotify Playing </h3>
-<a href="https://open.spotify.com/user/88h9x52o4rver6y7ka9upj5a6"><img src="https://spotify-playing-now-readme-8u5laga6k-dipanspotify.vercel.app/api/now-playing.svg" width="490" alt="Spotify" /></a>
-<h3><img src="https://i.imgur.com/yQHTmCW.png" width="15" /> Where to find me </h3>
-<a href="https://gist.github.com/themagicalmammal/"> <img alt="Gist" width="5.4%" src="https://i.imgur.com/6w4HNmL.png" /></a>
-<a href="https://pypi.org/user/themagicalmammal/"> <img alt="Pypi" width="5.4%" src="https://i.imgur.com/901ps8h.png" /></a>
-<a href="https://uk.linkedin.com/in/themagicalmammal/"> <img alt="Linkedin" width="5.4%" src="https://i.imgur.com/Hp2w5wM.png" /></a>
-<a href="https://www.reddit.com/user/themagicalmammal/"> <img alt="Reddit" width="5.4%" src="https://i.imgur.com/E8vTLyb.png" /></a>
-<a href="https://telegram.im/@themagicalmammal"> <img alt="Telegram" width="5.4%" src="https://i.imgur.com/8uCq4fi.png" /> </a>
-<a href="https://www.kaggle.com/themagicalmammal"> <img alt="Kaggle" width="5.4%" src="https://i.imgur.com/6XAnA1Y.png" /></a>
-<a href="https://forum.xda-developers.com/m/themagicalmammal.9670192/"> <img alt="XDA" width="5.4%" src="https://i.imgur.com/ZkDQREa.png" /></a>
-<a href="https://www.coursera.org/user/ccc24c4adb1726e9cbdef303b15cdbcf"> <img alt="Coursera" width="5.4%" src="https://i.imgur.com/bxjrGF3.png" /></a>
-<a href="https://www.sololearn.com/profile/4562055"> <img alt="Sololearn" width="5.4%" src="https://i.imgur.com/6mnh2V5.png" /></a>
-<a href="https://www.quora.com/profile/Dipan-Nanda"> <img alt="Quora" width="5.4%" src="https://i.imgur.com/4fFA2aO.png" /> </a>
-<a href="https://dsc.bio/themagicalmammal"> <img alt="Discord" width="5.4%" src="https://i.imgur.com/allk32s.png" /></a>
-<a href="https://open.spotify.com/user/88h9x52o4rver6y7ka9upj5a6?si=i5kyqZQOQmOu_NRn-T7FQw&nd=1"> <img alt="Spotify" width="5.4%" src="https://i.imgur.com/TuGJlcZ.png" /> </a>
-<a href="https://www.deviantart.com/themagicalmammal"> <img alt="Devintart" width="5.4%" src="https://i.imgur.com/YWUKoPE.png" /></a>
-<a href="https://myanimelist.net/profile/themagicalmammal"> <img alt="MAL" width="5.4%" src="https://i.imgur.com/TnZcuA4.png" /></a>
-<a href="https://medium.com/@d19cyber"> <img alt="Medium" width="5.4%" src="https://i.imgur.com/HvRIk6L.png" /></a>
-<a href="https://secure.plum.io/p/2Ui2Qr0KSS7QP04pEq_-BQ"> <img alt="Plum" width="5.4%" src="https://i.imgur.com/PNhxaKM.png" /></a>
+<img href="https://themagicalmammal.wrapped.run" src="/images/header.gif" />
+<p> I am Dipan, a Python Developer at <a href="https://www.etlsystems.com">
+    <img src="https://i.imgur.com/wCpjNzM.png" width="13" /> ETL Systems </a> in <img src="https://i.imgur.com/DPngeUJ.png" width="13" />
+  <b>London, England</b>. <img align="right" width="300" height="auto" src="/images/octocat/6.gif">
+<h3>
+  <img src="https://i.imgur.com/HFHIBmx.png" width="15" /> Weather in London
+</h3> Currently, the weather is: <b> {{city_temperature}}°C, <i>{{city_weather}}</i>
+</b>
+<br /> Today, the sun rises at <b>{{sun_rise}}</b> and sets at <b>{{sun_set}}</b>. </p>
+<h3>
+  <img src="https://i.imgur.com/aSVPWXc.png" width="15" /> Spotify Playing
+</h3>
+<a href="https://open.spotify.com/user/88h9x52o4rver6y7ka9upj5a6">
+  <img src="https://spotify-playing-now-readme-8u5laga6k-dipanspotify.vercel.app/api/now-playing.svg" width="490" alt="Spotify" />
+</a>
+<h3>
+  <img src="https://i.imgur.com/yQHTmCW.png" width="15" /> Where to find me
+</h3>
+<a href="https://gist.github.com/themagicalmammal/">
+  <img alt="Gist" width="5.4%" src="https://i.imgur.com/6w4HNmL.png" />
+</a>
+<a href="https://pypi.org/user/themagicalmammal/">
+  <img alt="Pypi" width="5.4%" src="https://i.imgur.com/901ps8h.png" />
+</a>
+<a href="https://uk.linkedin.com/in/themagicalmammal/">
+  <img alt="Linkedin" width="5.4%" src="https://i.imgur.com/Hp2w5wM.png" />
+</a>
+<a href="https://www.reddit.com/user/themagicalmammal/">
+  <img alt="Reddit" width="5.4%" src="https://i.imgur.com/E8vTLyb.png" />
+</a>
+<a href="https://telegram.im/@themagicalmammal">
+  <img alt="Telegram" width="5.4%" src="https://i.imgur.com/8uCq4fi.png" />
+</a>
+<a href="https://www.kaggle.com/themagicalmammal">
+  <img alt="Kaggle" width="5.4%" src="https://i.imgur.com/6XAnA1Y.png" />
+</a>
+<a href="https://forum.xda-developers.com/m/themagicalmammal.9670192/">
+  <img alt="XDA" width="5.4%" src="https://i.imgur.com/ZkDQREa.png" />
+</a>
+<a href="https://www.coursera.org/user/ccc24c4adb1726e9cbdef303b15cdbcf">
+  <img alt="Coursera" width="5.4%" src="https://i.imgur.com/bxjrGF3.png" />
+</a>
+<a href="https://www.sololearn.com/profile/4562055">
+  <img alt="Sololearn" width="5.4%" src="https://i.imgur.com/6mnh2V5.png" />
+</a>
+<a href="https://www.quora.com/profile/Dipan-Nanda">
+  <img alt="Quora" width="5.4%" src="https://i.imgur.com/4fFA2aO.png" />
+</a>
+<a href="https://dsc.bio/themagicalmammal">
+  <img alt="Discord" width="5.4%" src="https://i.imgur.com/allk32s.png" />
+</a>
+<a href="https://open.spotify.com/user/88h9x52o4rver6y7ka9upj5a6?si=i5kyqZQOQmOu_NRn-T7FQw&nd=1">
+  <img alt="Spotify" width="5.4%" src="https://i.imgur.com/TuGJlcZ.png" />
+</a>
+<a href="https://www.deviantart.com/themagicalmammal">
+  <img alt="Devintart" width="5.4%" src="https://i.imgur.com/YWUKoPE.png" />
+</a>
+<a href="https://myanimelist.net/profile/themagicalmammal">
+  <img alt="MAL" width="5.4%" src="https://i.imgur.com/TnZcuA4.png" />
+</a>
+<a href="https://medium.com/@d19cyber">
+  <img alt="Medium" width="5.4%" src="https://i.imgur.com/HvRIk6L.png" />
+</a>
+<a href="https://secure.plum.io/p/2Ui2Qr0KSS7QP04pEq_-BQ">
+  <img alt="Plum" width="5.4%" src="https://i.imgur.com/PNhxaKM.png" />
+</a>
 <br />
 <details>
-   <summary> &#9655;</summary>
-   <h3><img src="https://cdn-icons-png.flaticon.com/512/4257/4257487.png" width="15" /> Tech Stack </h3>
-   <img src="https://skillicons.dev/icons?i=py,django,html,css,js,r,latex,linux,md,bash,git,visualstudio,angular,cpp,mysql" />
-   <br />
-   <details>
+  <summary> &#9655;</summary>
+  <h3>
+    <img src="https://cdn-icons-png.flaticon.com/512/4257/4257487.png" width="15" /> Tech Stack
+  </h3>
+  <img src="https://skillicons.dev/icons?i=py,django,html,css,js,r,latex,linux,md,bash,git,visualstudio,angular,cpp,mysql" />
+  <br />
+  <details>
+    <summary> &#9655;</summary>
+    <img align="right" width="190" height="auto" src="/images/octocat/4.gif">
+    <h3>
+      <img src="https://i.imgur.com/x8tsLuE.png" width="15" /> Trophies
+    </h3>
+    <img src="https://github-profile-trophy.vercel.app/?username=themagicalmammal&amp;theme=onestar&amp;row=1&amp;column=4" alt="trophy" />
+    <br />
+    <details>
       <summary> &#9655;</summary>
-      <img align="right" width="200" height="auto" src="/images/octocat/4.gif">
-      <h3><img src="https://i.imgur.com/x8tsLuE.png" width="15" /> Trophies </h3>
-      <img src="https://github-profile-trophy.vercel.app/?username=themagicalmammal&amp;theme=onestar&amp;row=1&amp;column=4" alt="trophy" />
+      <img align="right" width="190" height="auto" src="/images/octocat/5.gif">
+      <h3>
+        <img src="https://i.imgur.com/XJ0hI8P.png" width="15" /> Visitor
+      </h3>
+      <img src="https://count.getloli.com/get/@themagicalmammal.github" />
       <br />
       <details>
-         <summary> &#9655;</summary>
-         <img align="right" width="200" height="auto" src="/images/octocat/5.gif">
-         <h3><img src="https://i.imgur.com/XJ0hI8P.png" width="15" /> Visitor </h3>
-         <img src="https://count.getloli.com/get/@themagicalmammal.github" />
-         <br /> 
-         <details>
-            <summary> &#9655;</summary>
-            <h3><img src="https://i.imgur.com/E9Droaq.png" width="15" /> End Credits </h3>
-            <div>
-               <img src="https://cultofthepartyparrot.com/parrots/hd/githubparrot.gif" width="3.6%"/>
-               <img src="https://cultofthepartyparrot.com/flags/hd/indiaparrot.gif" width="3.6%"/>
-               <img src="https://cultofthepartyparrot.com/parrots/hd/exceptionallyfastparrot.gif" width="3.6%"/>
-               <img src="https://cultofthepartyparrot.com/parrots/hd/60fpsparrot.gif" width="3.6%"/>
-               <img src="https://cultofthepartyparrot.com/parrots/hd/jumpingparrot.gif" width="3.6%"/>
-               <img src="https://cultofthepartyparrot.com/parrots/hd/opensourceparrot.gif" width="3.6%"/>
-               <img src="https://cultofthepartyparrot.com/parrots/hd/dealwithitnowparrot.gif" width="3.6%"/>
-               <img src="https://cultofthepartyparrot.com/parrots/hd/hypnoparrotlight.gif" width="3.6%"/>
-               <img src="https://cultofthepartyparrot.com/parrots/databaseparrot.gif" width="3.6%"/>
-               <img src="https://cultofthepartyparrot.com/parrots/hd/laptop_parrot.gif" width="3.6%"/>
-               <img src="https://cultofthepartyparrot.com/parrots/hd/spinningparrot.gif" width="3.6%"/>
-               <img src="https://cultofthepartyparrot.com/parrots/hd/levitationparrot.gif" width="3.6%"/>
-               <img src="https://cultofthepartyparrot.com/parrots/hd/meldparrot.gif" width="3.6%"/>
-               <img src="https://cultofthepartyparrot.com/parrots/slomoparrot.gif" width="3.6%"/>
-               <img src="https://cultofthepartyparrot.com/parrots/hd/moonwalkingparrot.gif" width="3.6%"/>
-               <img src="https://cultofthepartyparrot.com/parrots/hd/stableparrot.gif" width="3.6%"/>
-               <img src="https://cultofthepartyparrot.com/parrots/hd/scienceparrot.gif" width="3.6%"/>
-               <img src="https://cultofthepartyparrot.com/parrots/hd/pirateparrot.gif" width="3.6%"/>
-               <img src="https://cultofthepartyparrot.com/parrots/hd/footballparrot.gif" width="3.6%"/>
-               <img src="https://cultofthepartyparrot.com/parrots/hd/illuminatiparrot.gif" width="3.6%"/>
-               <img src="https://cultofthepartyparrot.com/parrots/hd/hypnoparrotdark.gif" width="3.6%"/>
-               <img src="https://cultofthepartyparrot.com/parrots/hd/mustacheparrot.gif" width="3.6%"/>
-            </div>
-            <br /> 
-         </details>
+        <summary> &#9655;</summary>
+        <h3>
+          <img src="https://i.imgur.com/E9Droaq.png" width="15" /> End Credits
+        </h3>
+        <div>
+          <img src="https://cultofthepartyparrot.com/parrots/hd/githubparrot.gif" width="3.6%" />
+          <img src="https://cultofthepartyparrot.com/flags/hd/indiaparrot.gif" width="3.6%" />
+          <img src="https://cultofthepartyparrot.com/parrots/hd/exceptionallyfastparrot.gif" width="3.6%" />
+          <img src="https://cultofthepartyparrot.com/parrots/hd/60fpsparrot.gif" width="3.6%" />
+          <img src="https://cultofthepartyparrot.com/parrots/hd/jumpingparrot.gif" width="3.6%" />
+          <img src="https://cultofthepartyparrot.com/parrots/hd/opensourceparrot.gif" width="3.6%" />
+          <img src="https://cultofthepartyparrot.com/parrots/hd/dealwithitnowparrot.gif" width="3.6%" />
+          <img src="https://cultofthepartyparrot.com/parrots/hd/hypnoparrotlight.gif" width="3.6%" />
+          <img src="https://cultofthepartyparrot.com/parrots/databaseparrot.gif" width="3.6%" />
+          <img src="https://cultofthepartyparrot.com/parrots/hd/laptop_parrot.gif" width="3.6%" />
+          <img src="https://cultofthepartyparrot.com/parrots/hd/spinningparrot.gif" width="3.6%" />
+          <img src="https://cultofthepartyparrot.com/parrots/hd/levitationparrot.gif" width="3.6%" />
+          <img src="https://cultofthepartyparrot.com/parrots/hd/meldparrot.gif" width="3.6%" />
+          <img src="https://cultofthepartyparrot.com/parrots/slomoparrot.gif" width="3.6%" />
+          <img src="https://cultofthepartyparrot.com/parrots/hd/moonwalkingparrot.gif" width="3.6%" />
+          <img src="https://cultofthepartyparrot.com/parrots/hd/stableparrot.gif" width="3.6%" />
+          <img src="https://cultofthepartyparrot.com/parrots/hd/scienceparrot.gif" width="3.6%" />
+          <img src="https://cultofthepartyparrot.com/parrots/hd/pirateparrot.gif" width="3.6%" />
+          <img src="https://cultofthepartyparrot.com/parrots/hd/footballparrot.gif" width="3.6%" />
+          <img src="https://cultofthepartyparrot.com/parrots/hd/illuminatiparrot.gif" width="3.6%" />
+          <img src="https://cultofthepartyparrot.com/parrots/hd/hypnoparrotdark.gif" width="3.6%" />
+          <img src="https://cultofthepartyparrot.com/parrots/hd/mustacheparrot.gif" width="3.6%" />
+        </div>
+        <br />
       </details>
-   </details>
+    </details>
+  </details>
 </details>
-
-<p><img src="https://i.imgur.com/JgaEjcz.png" width="11" /> <b> Last Refresh: </b> {{refresh_date}}</p>
-<img src="https://capsule-render-kusadtfih-dipanspotify.vercel.app/api?type=waving&color=f297c0&height=80&section=footer"/>
+<p>
+  <img src="https://i.imgur.com/JgaEjcz.png" width="11" />
+  <b> Last Refresh: </b> {{refresh_date}}
+</p>
+<img src="https://capsule-render-kusadtfih-dipanspotify.vercel.app/api?type=waving&color=f297c0&height=80&section=footer" />
